# g_player

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: pr-check.yml
include/Theme/: starryTheme.h  theme.h
include/gamepadBtn/: gamepadBtn.h  settingBtn.h
include/window/: window.h
src/code/: main  main.cpp
src/gamepadBtn/: settingBtn.cpp
src/window/: imgui_impl_bgfx.cpp  starryTheme.cpp  window.cpp
